# SwiftXcodeCMake

./: CMakeLists.txt  README.txt
source/: MyCFunctions.c  MyCFunctions.h  MySwiftBridgingHeader.h  ObjCTrampoline.h  ObjCTrampoline.m  SwiftMain.swift  SwiftTrampoline.swift  main.c
